added index html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>crap portfolio</title>
+    <title>bro what up</title>
   </head>
   <body>
-
+<h1>im tired bro</h1>
   </body>
 </html>
