added new title to index file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>bro what up</title>
+    <title>i have changed this to something else</title>
   </head>
   <body>
-<h1>im tired bro</h1>
+<h1>yeaa boi</h1>
   </body>
 </html>
